# Haskell-bridge

./: .gitignore  Auction.hs  BiddingSAYCSimplified.hs  CHANGELOG.md  Calls.hs  Cards.hs  FixedList.hs  Haskell-bridge.cabal  LICENSE  Play.hs  Player.hs  SAYC.hs  SimpleConvention.hs  main.hs  manager.sh  sandbox.hs
app/: Play.hs
hi/: Auction.hi  Bid.hi  Calls.hi  Cards.hi  Main.hi  Play.hi  Player.hi
src/: Auction.hs  Calls.hs  Cards.hs  Conventions.hs  Game.hs  Introduction.hs  Main.hs  Others.hs  Play.hs  Player.hs  Shuffle.hs
src/glib-0.13.10.0/dist-newstyle/cache/: compiler  config
