cabal-version:      3.0
name:               Haskell-bridge
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Bartosz Furmanek
maintainer:         126062736+BartTheBartender@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing -Wextra

executable Haskell-bridge
    import:           warnings
    main-is:          Main.hs
    other-modules:    Player, Calls, Auction, Play, BiddingSAYCSimplified, Cards
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, array, random-shuffle, MonadRandom,
      mtl, process, ansi-terminal
    hs-source-dirs:   src
    default-language: Haskell2010
